added examples to op lecture

--- a/notebooks/Classes-Advanced.ipynb
+++ b/notebooks/Classes-Advanced.ipynb
@@ -66,32 +66,14 @@
     "- To declare all member functions of a class as friends of other class, place a **friend** declaration of the form\n",
     "```cpp\n",
     "friend class <frend-class-name>;\n",
+    "// or\n",
+    "friend <frend-function-name>;\n",
     "```"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Friendship\n",
-    "\n",
-    "Friendship is granted, not taken\n",
-    "- for class B to be a friend of class A, class A must explicitly declare that class B is its friend.\n",
-    "\n",
-    "Friendship is not symmetric\n",
-    "- if class A is a friend of class B, you cannot infer that class B is a friend of class A.\n",
-    "\n",
-    "Friendship is not transitive\n",
-    "- if class A is a friend of class B and class B is a friend of class C, you cannot infer that class A is a friend of class C."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -127,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -144,13 +126,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_11:4:7: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'x' is a private member of 'Point3D'\u001b[0m\n",
+      "    p.x = x;\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m\u001b[1minput_line_9:5:9: \u001b[0m\u001b[0;1;30mnote: \u001b[0mdeclared private here\u001b[0m\n",
+      "    int x; int y; int z;\n",
+      "\u001b[0;1;32m        ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "// friend function that has access to\n",
+    "// Point3D private data members\n",
+    "void setY(Point3D& p, int x){\n",
+    "    p.x = x;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x:0, y:0, z:0)\n",
+      "(x:1, y:0, z:0)\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point3D p;\n",
@@ -162,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -182,13 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x:0, y:0, z:0)\n",
+      "(x:100, y:0, z:0)\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Point3DUtils pu;\n",
@@ -197,6 +236,26 @@
     "    pu.setDefaultX(p);\n",
     "    cout << p.toString() << endl;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Friendship\n",
+    "\n",
+    "Friendship is granted, not taken\n",
+    "- for class B to be a friend of class A, class A must explicitly declare that class B is its friend.\n",
+    "\n",
+    "Friendship is not symmetric\n",
+    "- if class A is a friend of class B, you cannot infer that class B is a friend of class A.\n",
+    "\n",
+    "Friendship is not transitive\n",
+    "- if class A is a friend of class B and class B is a friend of class C, you cannot infer that class A is a friend of class C."
    ]
   },
   {
@@ -626,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -653,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -664,15 +723,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = 10\n",
-      "(*this).x = 10\n"
+      "x = 100\n",
+      "(*this).x = 100\n"
      ]
     }
    ],
    "source": [
     "{\n",
     "    Point p{0};\n",
-    "    p.setX(10);\n",
+    "    p.setX(100);\n",
     "}"
    ]
   },
@@ -692,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -711,13 +770,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x:1799847936, y:32557)\n",
+      "(x:1, y:2)\n"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    Coord c;\n",
