--- a/notebooks/Operators.ipynb
+++ b/notebooks/Operators.ipynb
@@ -322,12 +322,12 @@
     }
    },
    "source": [
-    "[ClassWithBinOp.cpp](src/ClassWithBinOp.cpp)"
+    "[ClassWithBinOp.cpp](../src/ClassWithBinOp.cpp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -414,12 +414,12 @@
     }
    },
    "source": [
-    "[ClassWithStreamOp.cpp](src/ClassWithStreamOp.cpp)"
+    "[ClassWithStreamOp.cpp](../src/ClassWithStreamOp.cpp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
