--- a/notebooks/Classes-Advanced.ipynb
+++ b/notebooks/Classes-Advanced.ipynb
@@ -38,14 +38,15 @@
    },
    "source": [
     "- Friend function and classes\n",
+    "- **this** pointer\n",
     "- Pointer to a private data member\n",
     "- Default memberwise assignment\n",
     "- Const objects\n",
     "- Const member functions\n",
     "- Composition\n",
     "- Default copy constructor\n",
-    "- **this** pointer\n",
-    "- Static class members"
+    "- Static class members\n",
+    "- Dynamic Memory Management"
    ]
   },
   {
@@ -256,6 +257,77 @@
     "\n",
     "Friendship is not transitive\n",
     "- if class A is a friend of class B and class B is a friend of class C, you cannot infer that class A is a friend of class C."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## this Pointer\n",
+    "\n",
+    "Every object has access to its own address through a pointer called **this** (a C++ keyword).\n",
+    "- The **this** pointer is not part of the object itself\n",
+    "    - the memory occupied by the this pointer is not reflected in the result of a **sizeof** operation on the object.\n",
+    "- Rather, the this pointer is passed (by the compiler) as an **implicit** argument to each of the object's non-static member functions.\n",
+    "\n",
+    "Member functions use the this pointer **implicitly** or **explicitly** to reference an object's data members and other member functions.\n",
+    "- A common explicit use of the this pointer is to avoid naming conflicts between a class's data members and member-function parameters (or other local variables)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Point {\n",
+    "    int x;\n",
+    "public:\n",
+    "    Point(int val) : x{val} {}\n",
+    "    void setX(int x){\n",
+    "        // implicitly use the this pointer to access the member x\n",
+    "        cout << \"x = \" << x;\n",
+    "        // explicitly use the this pointer and the arrow operator\n",
+    "        // to access the member x\n",
+    "        this->x = x;\n",
+    "        // explicitly use the dereferenced this pointer and\n",
+    "        // the dot operator to access the member x\n",
+    "        cout << \"\\n(*this).x = \" << (*this).x << endl;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 100\n",
+      "(*this).x = 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    Point p{0};\n",
+    "    p.setX(100);\n",
+    "}"
    ]
   },
   {
@@ -672,77 +744,6 @@
     }
    },
    "source": [
-    "## this Pointer\n",
-    "\n",
-    "Every object has access to its own address through a pointer called **this** (a C++ keyword).\n",
-    "- The **this** pointer is not part of the object itself\n",
-    "    - the memory occupied by the this pointer is not reflected in the result of a **sizeof** operation on the object.\n",
-    "- Rather, the this pointer is passed (by the compiler) as an **implicit** argument to each of the object's non-static member functions.\n",
-    "\n",
-    "Member functions use the this pointer **implicitly** or **explicitly** to reference an object's data members and other member functions.\n",
-    "- A common explicit use of the this pointer is to avoid naming conflicts between a class's data members and member-function parameters (or other local variables)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Point {\n",
-    "    int x;\n",
-    "public:\n",
-    "    Point(int val) : x{val} {}\n",
-    "    void setX(int x){\n",
-    "        // implicitly use the this pointer to access the member x\n",
-    "        cout << \"x = \" << x;\n",
-    "        // explicitly use the this pointer and the arrow operator\n",
-    "        // to access the member x\n",
-    "        this->x = x;\n",
-    "        // explicitly use the dereferenced this pointer and\n",
-    "        // the dot operator to access the member x\n",
-    "        cout << \"\\n(*this).x = \" << (*this).x << endl;\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x = 100\n",
-      "(*this).x = 100\n"
-     ]
-    }
-   ],
-   "source": [
-    "{\n",
-    "    Point p{0};\n",
-    "    p.setX(100);\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Cascaded Function Calls\n",
     "\n",
     "We can use of the **this** pointer is to enable **cascaded member-function calls** by returning **\\*this**.\n",
@@ -892,7 +893,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -910,6 +915,146 @@
     "    obj.setX(10);\n",
     "    cout << obj.x << endl;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Dynamic Memory Management\n",
+    "\n",
+    "- You can control memory **allocation** and **deallocation** in a program for objects and for arrays of any built-in or user-defined type.\n",
+    "    - Known as **dynamic memory management**; performed with **new** and **delete**.\n",
+    "- Use the **new** operator to dynamically allocate the exact amount of memory required to hold an object at execution time.\n",
+    "- The object is created in the free store - **heap** - a region of memory assigned to each program for storing dynamically allocated objects.\n",
+    "- Once memory is allocated, you can access it via the pointer that operator **new** returns.\n",
+    "- Return memory by using the **delete** operator to **deallocate** it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Obtaining Dynamic Memory\n",
+    "\n",
+    "- The **new** operator allocates storage of the proper size for an object\n",
+    "    - calls the default constructor to initialize the object, and\n",
+    "    - returns a pointer to the type specified to the right of the new operator.\n",
+    "- If **new** is unable to find sufficient space in memory for the object, it indicates that an error occurred\n",
+    "    - by \"throwing an exception\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    ClassWithIncOp2* ptr{new ClassWithIncOp2(7)};\n",
+    "    cout << ptr->getX();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Releasing Dynamic Memory\n",
+    "\n",
+    "- To destroy a dynamically allocated object, use the **delete** operator as follows:\n",
+    "        delete ptr;\n",
+    "- This statement first calls the **destructor** for the object to which `ptr` points,\n",
+    "    - then deallocates the memory associated with the object, returning the memory to the free store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\n",
+    "    ClassWithIncOp2* ptr{new ClassWithIncOp2(7)};\n",
+    "    cout << ptr->getX() << endl;\n",
+    "    delete ptr;\n",
+    "    // delete ptr; //DO NOT DO THAT TWO TIMES\n",
+    "    ptr = nullptr;\n",
+    "    cout << ptr->getX();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Tips\n",
+    "\n",
+    "- **Memory leak:** Not releasing dynamically allocated memory when it's no longer needed can cause the system to run out of memory prematurely.\n",
+    "- Do not delete memory that was not allocated by **new**. Doing so results in undefined behavior.\n",
+    "\n",
+    "- After you delete a block of dynamically allocated memory, be sure not to delete the same block again.\n",
+    "    - One way to guard against this is to immediately set the pointer to `nullptr`.\n",
+    "    - Deleting a `nullptr` has no effect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Initializing Dynamic Memory\n",
+    "\n",
+    "- You can provide an **initializer** for a newly created fundamental type variable, as in\n",
+    "        double *ptr{new double{3.14159}};\n",
+    "- The same syntax can be used to specify a comma-separated list of arguments to the constructor of an object.\n",
+    "- You can also use the **new** operator to allocate built-in arrays dynamically.\n",
+    "        int *gradesArray{new int[10]{}};        \n",
+    "- A dynamically allocated array's **size** can be specified using any non-negative integral expression that can be evaluated at execution time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Releasing Dynamically Allocated Built-In Arrays\n",
+    "\n",
+    "- To deallocate a dynamically allocated array, use the statement\n",
+    "        delete[] ptr;\n",
+    "- If the pointer points to a built-in array of objects, the statement first calls the destructor for every object in the array, then deallocates the memory.\n",
+    "- Using **delete** or **[]** on a **nullptr** has no effect.\n",
+    "- Using **delete** instead of **delete[]** for built-in arrays of objects can lead to runtime logic errors."
    ]
   }
  ],
