provided solutions for HW2 & LAB3

--- a/notebooks/Classes-Advanced.ipynb
+++ b/notebooks/Classes-Advanced.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -454,16 +454,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p1: (x:1, y:2), p2: (x:0, y:0)\n",
-      "p1: (x:1, y:2), p2: (x:1, y:2)\n",
-      "Point2D object [(x:1, y:2)] is destroyed\n",
-      "Point2D object [(x:1, y:2)] is destroyed\n"
+      "p1: (x:3, y:2), p2: (x:0, y:0)\n",
+      "p1: (x:3, y:2), p2: (x:3, y:2)\n",
+      "Point2D object [(x:3, y:2)] is destroyed\n",
+      "Point2D object [(x:3, y:2)] is destroyed\n"
      ]
     }
    ],
    "source": [
     "{\n",
-    "    Point2D p1{1,2};\n",
+    "    Point2D p1{3,2};\n",
     "    Point2D p2;\n",
     "    cout << \"p1: \" << p1.toString() << \", p2: \" << p2.toString() << endl;\n",
     "    p2 = p1; //  memberwise assignment\n",
@@ -599,7 +599,7 @@
     "It is natural to think of objects as containing other objects.\n",
     "- an aircraft may be studied by decomposing it into its propulsion system, etc.\n",
     "- object structure\n",
-    "- \"part of\" hierarchy / \"has-a\" relation\n",
+    "- \"part-of\" hierarchy / \"has-a\" relation\n",
     "    - has-a relationship - a class can have objects of other classes as members.\n",
     "\n",
     "Data members are constructed in the order in which they're declared in the class definition\n",
