--- a/notebooks/Inheritance.ipynb
+++ b/notebooks/Inheritance.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "</div>\n",
     "<div style=\"width:30%; float: left;\">\n",
-    "    <img src=\"img/Hierarchies.png\"/>\n",
+    "    <img src=\"../img/Hierarchies.png\"/>\n",
     "</div>\n",
     "</div>\n"
    ]
@@ -321,7 +321,7 @@
     "\n",
     "</div>\n",
     "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/Inheritance2.png\"/>\n",
+    "    <img src=\"../img/Inheritance2.png\"/>\n",
     "</div>\n",
     "</div>"
    ]
@@ -499,7 +499,7 @@
     "- he arrow means *inherited from or derived from or is a more specific version of*\n",
     "</div>\n",
     "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/Generalization.png\"/>\n",
+    "    <img src=\"../img/Generalization.png\"/>\n",
     "</div>\n",
     "</div>"
    ]
