--- a/notebooks/Operators.ipynb
+++ b/notebooks/Operators.ipynb
@@ -430,8 +430,9 @@
     "class ClassWithStreamOp {\n",
     "    friend std::ostream& operator<<(std::ostream&, const ClassWithStreamOp&);\n",
     "    friend std::istream& operator>>(std::istream&, ClassWithStreamOp&);\n",
-    "public:\n",
+    "private:\n",
     "    int x;\n",
+    "public:    \n",
     "    ClassWithStreamOp(int v): x{v}{}    \n",
     "};"
    ]
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -597,7 +598,7 @@
     "    int x;\n",
     "public:\n",
     "    ClassWithIncOp(int v): x{v}{}\n",
-    "    int getX() {return x;}\n",
+    "    int getX() const { return x;}\n",
     "    ClassWithIncOp& operator++(){\n",
     "        // increment object\n",
     "        x = x + 1;\n",
