--- a/notebooks/Inheritance.ipynb
+++ b/notebooks/Inheritance.ipynb
@@ -179,15 +179,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "## Inheritance as a Relation\n",
-    "\n",
-    "<div>\n",
-    "<div style=\"width:70%; float: left; padding: 1em;\">\n",
     "    \n",
     "- We distinguish between the **is-a** relationship and the **has-a** relationship.\n",
     "\n",
@@ -198,13 +196,20 @@
     "- In an **is-a** relationship, an object of a **derived class** also can be treated as an object of its **base class**.\n",
     "\n",
     "\n",
-    "- By contrast, the **has-a** relationship represents **composition**.\n",
-    "\n",
-    "</div>\n",
-    "<div style=\"width:30%; float: left;\">\n",
-    "    <img src=\"../img/Hierarchies.png\"/>\n",
-    "</div>\n",
-    "</div>\n"
+    "- By contrast, the **has-a** relationship represents **composition**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "hide_input": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"../img/Hierarchies.png\" style=\"width:600px\"/>"
    ]
   },
   {
@@ -303,6 +308,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
@@ -310,20 +316,23 @@
    "source": [
     "## Example: Shape\n",
     "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left; padding: 1em;\">\n",
-    "\n",
     "Consider the Shape inheritance hierarchy:\n",
     "- Begins with **base class** `Shape`.\n",
     "- Classes `TwoDimensionalShape` and `ThreeDimensionalShape` **derive** from base class `Shape`\n",
     "    - `Shapes` are either `TwoDimensionalShapes` or `Three-DimensionalShapes`.\n",
-    "- The third level of this hierarchy contains some more specific types of `TwoDimensionalShapes` and `ThreeDimensionalShapes`.\n",
-    "\n",
-    "</div>\n",
-    "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"../img/Inheritance2.png\"/>\n",
-    "</div>\n",
-    "</div>"
+    "- The third level of this hierarchy contains some more specific types of `TwoDimensionalShapes` and `ThreeDimensionalShapes`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"../img/Inheritance2.png\" style=\"width:800px\"/>"
    ]
   },
   {
@@ -357,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -406,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -420,7 +429,7 @@
       "Counter: No-arg constructor\n",
       "Counter state: 0\n",
       "Counter state: 3\n",
-      "Counter state: 1\n",
+      "Counter state: 0\n",
       "Counter: destructor\n"
      ]
     }
@@ -431,7 +440,7 @@
     "    cout << \"Counter state: \" << c.getCount() << endl;\n",
     "    ++c; ++c; ++c;\n",
     "    cout << \"Counter state: \" << c.getCount() << endl;\n",
-    "    --c; --c;\n",
+    "    --c; --c; --c;\n",
     "    cout << \"Counter state: \" << c.getCount() << endl;\n",
     "}"
    ]
@@ -483,6 +492,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
@@ -490,18 +500,22 @@
    "source": [
     "## Generalization\n",
     "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left; padding: 1em;\">\n",
-    "\n",
     "In the UML, **inheritance** is called **generalization**\n",
     "- because the parent class is a more general form of the child class\n",
     "- indicated by a **triangular arrowhead** on the line connecting the parent and child classes\n",
-    "- he arrow means *inherited from or derived from or is a more specific version of*\n",
-    "</div>\n",
-    "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"../img/Generalization.png\"/>\n",
-    "</div>\n",
-    "</div>"
+    "- he arrow means *inherited from or derived from or is a more specific version of*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"../img/Generalization.png\" style=\"width:400px\"/>"
    ]
   },
   {
@@ -518,29 +532,36 @@
     "used by objects of the derived class*.\n",
     "- This is called **accessibility**.\n",
     "\n",
-    "![Accessibility2](img/Accessibility2.png)"
+    "\n",
+    "<img src=\"../img/Accessibility2.png\" style=\"width:70%\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## Accessing Base Class Members (cont.)\n",
+    "## Access specifiers without inheritance\n",
     "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left;\">\n",
-    "    <img src=\"img/Access-No-Inheritance.png\"/>\n",
-    "    Access specifiers without inheritance.\n",
-    "</div>\n",
-    "<div style=\"width:50%; float: left;\">\n",
-    "    <img src=\"img/Access-Inheritance.png\"/>\n",
-    "    Access specifiers with inheritance.\n",
-    "</div>\n",
-    "</div>"
+    "<img src=\"../img/Access-No-Inheritance.png\" style=\"width:100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "## Access specifiers with inheritance\n",
+    "\n",
+    "<img src=\"../img/Access-Inheritance.png\" style=\"width:70%\"/>"
    ]
   },
   {
@@ -716,6 +737,7 @@
    "source": [
     "class CountDn3 : public Counter // derived class\n",
     "{\n",
+    "    // using Counter::Counter; // creates default constructors similar to ones from the base class\n",
     "public:\n",
     "    CountDn3() : Counter() { cout << \"CountDn3: No-arg constructor\" << endl; }    // no-arg constructor        \n",
     "    CountDn3(int c) : Counter(c) { cout << \"CountDn3: constructor with \" << c << endl; } // 1-arg constructor\n",
@@ -851,13 +873,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_14:1:7: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'A'\u001b[0m\n",
+      "class A //base class\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m\u001b[1minput_line_13:1:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
+      "class A //base class\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
    "source": [
     "class A //base class\n",
     "{\n",
@@ -872,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -895,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -918,8 +962,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -929,16 +974,15 @@
     "{\n",
     "    int a;\n",
     "    B objB;\n",
-    "    a = objB.privdataA; //error: not accessible\n",
-    "    a = objB.protdataA; //error: not accessible\n",
+    "    //a = objB.privdataA; //error: not accessible\n",
+    "    //a = objB.protdataA; //error: not accessible\n",
     "    a = objB.pubdataA;  //OK (A public to B)\n",
-    "\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -949,19 +993,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_34:7:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcannot cast 'C' to its private base class 'A'\u001b[0m\n",
+      "\u001b[1minput_line_21:7:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcannot cast 'C' to its private base class 'A'\u001b[0m\n",
       "    a = objC.pubdataA;  //error: not accessible (A private to C)\n",
       "\u001b[0;1;32m        ^\n",
-      "\u001b[0m\u001b[1minput_line_26:1:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0mdeclared private here\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_16:1:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0mdeclared private here\u001b[0m\n",
       "class C : private A //privately-derived class\n",
       "\u001b[0;1;32m          ^~~~~~~~~\n",
-      "\u001b[0m\u001b[1minput_line_34:7:14: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'pubdataA' is a private member of 'A'\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_21:7:14: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'pubdataA' is a private member of 'A'\u001b[0m\n",
       "    a = objC.pubdataA;  //error: not accessible (A private to C)\n",
       "\u001b[0;1;32m             ^\n",
-      "\u001b[0m\u001b[1minput_line_26:1:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0mconstrained by private inheritance here\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_16:1:11: \u001b[0m\u001b[0;1;30mnote: \u001b[0mconstrained by private inheritance here\u001b[0m\n",
       "class C : private A //privately-derived class\n",
       "\u001b[0;1;32m          ^~~~~~~~~\n",
-      "\u001b[0m\u001b[1minput_line_22:8:9: \u001b[0m\u001b[0;1;30mnote: \u001b[0mmember is declared here\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_13:8:9: \u001b[0m\u001b[0;1;30mnote: \u001b[0mmember is declared here\u001b[0m\n",
       "    int pubdataA;\n",
       "\u001b[0;1;32m        ^\n",
       "\u001b[0m"
@@ -996,7 +1040,7 @@
    "source": [
     "## Public and Private Derivation\n",
     "\n",
-    "![Derivation](img/Derivation.png)"
+    "![Derivation](../img/Derivation.png)"
    ]
   },
   {
@@ -1010,13 +1054,14 @@
     "## Public, Protected and Private Inheritance\n",
     "\n",
     "<div><div style=\"width:80%; float: left; display: inline-block;margin-left: 15%;\">\n",
-    "    <img src=\"img/Accessibility.png\"/>\n",
+    "    <img src=\"../img/Accessibility.png\"/>\n",
     "</div></div>   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1024,18 +1069,21 @@
    "source": [
     "## Multiple Inheritance\n",
     "\n",
-    "<div>\n",
-    "<div style=\"width:50%; float: left; padding: 1em;\">\n",
-    "\n",
     "- A class can be derived from more than one base class. This is called multiple inheritance.\n",
     "- The base classes from which `C` is derived are listed following the colon in `C`’s specification;\n",
-    "    - they are separated by commas.\n",
-    "    \n",
-    "</div>\n",
-    "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/MultipleInheritance.png\"/>\n",
-    "</div>\n",
-    "</div>"
+    "    - they are separated by commas.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"../img/MultipleInheritance.png\" style=\"width:70%\"/>"
    ]
   },
   {
@@ -1076,6 +1124,9 @@
    "mimetype": "text/x-c++src",
    "name": "c++",
    "version": "-std=c++14"
+  },
+  "rise": {
+   "enable_chalkboard": true
   }
  },
  "nbformat": 4,
