--- a/notebooks/Polymorphism.ipynb
+++ b/notebooks/Polymorphism.ipynb
@@ -62,15 +62,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
     "## Inheritance  as a Relation\n",
-    "\n",
-    "<div>\n",
-    "<div style=\"width:70%; float: left; padding: 1em;\">\n",
     "    \n",
     "- We distinguish between the **is-a** relationship and the **has-a** relationship.\n",
     "\n",
@@ -81,18 +79,25 @@
     "- In an **is-a** relationship, an object of a **derived class** also can be treated as an object of its **base class**.\n",
     "\n",
     "\n",
-    "- By contrast, the **has-a** relationship represents **composition**.\n",
-    "\n",
-    "</div>\n",
-    "<div style=\"width:30%; float: left;\">\n",
-    "    <img src=\"img/Hierarchies.png\"/>\n",
-    "</div>\n",
-    "</div>\n"
+    "- By contrast, the **has-a** relationship represents **composition**.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"../img/Hierarchies.png\" style=\"width:80%; float: left;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "slide"
     }
@@ -107,13 +112,19 @@
     "    - An **object of a derived class** can be treated as an **object of its base class**.\n",
     "- Despite the fact that the *derived-class objects* are of **different types**, the compiler **allows** this because each *derived-class object* **is an** *object of its base class*.\n",
     "- We cannot treat a base-class object as an any of its derived classes.\n",
-    "- The **is-a** relationship applies only from a derived class to its direct and indirect base classes.\n",
-    "\n",
-    "</div>\n",
-    "<div style=\"width:30%; float: left;\">\n",
-    "    <img src=\"img/Hierarchies.png\"/>\n",
-    "</div>\n",
-    "</div>\n"
+    "- The **is-a** relationship applies only from a derived class to its direct and indirect base classes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"../img/Hierarchies.png\"  style=\"width:80%; float: left;\"/>"
    ]
   },
   {
@@ -133,7 +144,7 @@
     "- The **base class** is `Shape`\n",
     "</div>\n",
     "<div style=\"width:50%; float: right;\">\n",
-    "    <img src=\"img/Inheritance2.png\"/>\n",
+    "    <img src=\"../img/Inheritance2.png\"/>\n",
     "</div>\n",
     "</div>"
    ]
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -232,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -272,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -294,17 +305,13 @@
     "{\n",
     "    // Create derived-class objects\n",
     "    Circle c;\n",
-    "    c.draw();\n",
-    "    \n",
+    "    c.draw();    \n",
     "    Square s;\n",
-    "    s.draw();\n",
-    "    \n",
+    "    s.draw();    \n",
     "    // Use base-class pointer\n",
     "    Shape* ptr;\n",
-    "\n",
     "    ptr = &c;\n",
-    "    ptr->draw();\n",
-    "    \n",
+    "    ptr->draw();    \n",
     "    ptr = &s;\n",
     "    ptr->draw();\n",
     "}"
@@ -340,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -351,7 +358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_16:4:13: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcannot initialize a variable of type 'Circle *' with an rvalue of type 'Shape *'\u001b[0m\n",
+      "\u001b[1minput_line_18:4:13: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcannot initialize a variable of type 'Circle *' with an rvalue of type 'Shape *'\u001b[0m\n",
       "    Circle* ptr = &s;\n",
       "\u001b[0;1;32m            ^     ~~\n",
       "\u001b[0m"
@@ -388,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -399,7 +406,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_19:7:11: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno member named 'radius' in 'Shape'\u001b[0m\n",
+      "\u001b[1minput_line_23:8:11: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno member named 'radius' in 'Shape'\u001b[0m\n",
       "    sptr->radius();\n",
       "\u001b[0;1;32m    ~~~~  ^\n",
       "\u001b[0m"
@@ -420,6 +427,7 @@
     "    Circle* cptr = &c;\n",
     "    cptr->radius();\n",
     "    Shape* sptr = &c;\n",
+    "    sptr->draw();\n",
     "    sptr->radius();\n",
     "}"
    ]
@@ -441,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -454,7 +462,8 @@
      "output_type": "stream",
      "text": [
       "Draw circle\n",
-      "The radius is 0\n"
+      "The radius is 0\n",
+      "The side is 0\n"
      ]
     }
    ],
@@ -466,12 +475,13 @@
     "    Shape* sptr{&c};\n",
     "    ((Circle*)sptr)->radius();\n",
     "    //sptr->radius(); //error\n",
+    "    ((Square*)sptr)->side(); // Circle has a side!!!\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -482,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The radius is 8.48668e-08\n"
+      "The radius is 9.38139e-34\n"
      ]
     }
    ],
@@ -685,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -702,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -719,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -745,7 +755,7 @@
     "    \n",
     "    sptr = new Cube();\n",
     "    sptr->draw();\n",
-    "    delete sptr;\n",
+    "    delete sptr; // Problem: base class destructor is called\n",
     "}"
    ]
   },
@@ -767,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1008,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1022,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1042,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1053,7 +1063,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_13:3:21: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'CommunityMember' is an abstract class\u001b[0m\n",
+      "\u001b[1minput_line_18:3:21: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'CommunityMember' is an abstract class\u001b[0m\n",
       "    CommunityMember cm;\n",
       "\u001b[0;1;32m                    ^\n",
       "\u001b[0m"
@@ -1076,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1096,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1116,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1124,24 +1134,21 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_12:3:21: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'CommunityMember' is an abstract class\u001b[0m\n",
-      "    CommunityMember cm;\n",
-      "\u001b[0;1;32m                    ^\n",
-      "\u001b[0m\u001b[1minput_line_9:7:18: \u001b[0m\u001b[0;1;30mnote: \u001b[0munimplemented pure virtual method 'act' in 'CommunityMember'\u001b[0m\n",
-      "    virtual void act() = 0; // pure virtual function\n",
-      "\u001b[0;1;32m                 ^\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
+      "Create a community member\n",
+      "Create an employee\n",
+      "Create a community member\n",
+      "Create an employee\n",
+      "Create a faculty\n",
+      "I'm an employee\n",
+      "I'm a faculty\n",
+      "Destroy an employee\n",
+      "Destroy a community member\n",
+      "Destroy a faculty\n",
+      "Destroy an employee\n",
+      "Destroy a community member\n"
      ]
     }
    ],
@@ -1159,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1179,17 +1186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_18:3:13: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'Student' is an abstract class\u001b[0m\n",
+      "\u001b[1minput_line_20:3:13: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable type 'Student' is an abstract class\u001b[0m\n",
       "    Student s;\n",
       "\u001b[0;1;32m            ^\n",
-      "\u001b[0m\u001b[1minput_line_9:7:18: \u001b[0m\u001b[0;1;30mnote: \u001b[0munimplemented pure virtual method 'act' in 'Student'\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_12:7:18: \u001b[0m\u001b[0;1;30mnote: \u001b[0munimplemented pure virtual method 'act' in 'Student'\u001b[0m\n",
       "    virtual void act() = 0; // pure virtual function\n",
       "\u001b[0;1;32m                 ^\n",
       "\u001b[0m"
@@ -1272,6 +1279,9 @@
    "mimetype": "text/x-c++src",
    "name": "c++",
    "version": "-std=c++14"
+  },
+  "rise": {
+   "enable_chalkboard": true
   }
  },
  "nbformat": 4,
