--- a/notebooks/Templates.ipynb
+++ b/notebooks/Templates.ipynb
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "template <typename T>\n",
+    "template<typename T>\n",
     "class Stack {\n",
     "public:\n",
     "    // return the top element of the Stack\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -254,7 +254,8 @@
     "- A declaration creates a 100-element array of doubles class-template specialization, then uses it to instantiate the object `fixeSizeArray`.\n",
     "\n",
     "```c++\n",
-    "array<double, 100> fixeSizeArray;\n",
+    "// doulbe fixeSizeArray[100];\n",
+    "array<double, 100> fixeSizeArray; \n",
     "```\n",
     "\n",
     "- The array class template encapsulates a **built-in array**.\n",
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -342,7 +343,7 @@
     "- In addition, a type parameter can specify a **default type argument**.\n",
     "- For example, the C++ standard's stack container adapter class template begins with:\n",
     "```c++\n",
-    "template <typename T, class Container = deque<T>>\n",
+    "template <typename T, class S, class Container = deque<T>>\n",
     "```\n",
     "- which specifies that a stack uses a `deque` by default to store the stack's elements of type `T`.\n",
     "\n",
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -494,7 +495,7 @@
        "20"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -515,16 +516,16 @@
     {
      "data": {
       "text/plain": [
-       "'b'"
+       "'t'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mymax('a','b')"
+    "mymax('t', '2')"
    ]
   },
   {
